release: prepare v8.3 single-node audit platform
